--- a/09-pod_config.yaml
+++ b/09-pod_config.yaml
@@ -9,7 +9,6 @@ spec:
  containers:
   - name: nginx
     image: nginx
-    env:
-     valueFrom:
+    envFrom:
       configMapKeyRef:
        name: config-map
