--- a/14-loadbalancer.yaml
+++ b/14-loadbalancer.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nodeport
+  name: loadBalancer
   labels: 
     purpose: service-demo
 spec:
@@ -19,7 +19,7 @@ spec:
 apiVersion: v1
 kind: Pod
 metadata: 
-  name: nginx
+  name: nginx-pod
   labels:
     purpose: service-demo
     environment: dev
