--- a/volumes/01-ebs-static.yaml
+++ b/volumes/01-ebs-static.yaml
@@ -34,7 +34,8 @@ metadata:
     project: roboshop
 spec:
   nodeSelector:
-    topology.kubernetes.io/zone=us-east-1a
+    topology.kubernetes.io/zone: us-east-1a
+
   containers:
   - name: nginx
     image: nginx
