--- a/volumes/05-efs-sc.yaml
+++ b/volumes/05-efs-sc.yaml
@@ -6,6 +6,6 @@ provisioner: efs.csi.aws.com
 reclaimPolicy: Retain 
 parameters:
   provisioningMode: efs-ap
-  fileSystemId: fs-0807041eac3ddddd8
+  fileSystemId: fs-0807041eac3ddddd8 #change the ID after creating efs
   directoryPerms: "700"
-  basePath: "/roboshop" # /roboshop/cart
+  basePath: "/roboshop" # starts with name /roboshop/cart
