--- a/16-deployment.yaml
+++ b/16-deployment.yaml
@@ -26,3 +26,22 @@ spec:
       containers:
       - name: nginx
         image: nginx:latest
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: loadbalancer
+  labels: 
+    purpose: deployment-demo
+    project: roboshop
+    app: nginx
+spec:
+  type: LoadBalancer
+  selector: 
+    purpose: deployment-demo
+    project: roboshop
+    app: nginx
+  ports:
+    - protocol: TCP
+      port: 80 #service port 
+      targetPort: 80  # container port
